--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 
   <body>
     <!-- write the body here -->
+  <form id="userForm">
+    <label for="age">Age:</label><br>
+    <input type="number" id="age" name="age"><br>
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name"><br>
+    <input type="submit" id="btn" value="Submit">
+  </form>
+  <div id="output"></div>
+
+
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
